--- a/public/locales/az/translation.json
+++ b/public/locales/az/translation.json
@@ -39,5 +39,6 @@
   "Vakansiya": "Vakansiya",
   "Əlavə": "Əlavə",
   "Xəbərlər": "Xəbərlər",
-  "Bütün hüquqlar qorunur": "Bütün hüquqlar qorunur"
+  "Bütün hüquqlar qorunur": "Bütün hüquqlar qorunur",
+  "Əsas səhifə": "Əsas səhifə"
 }
