--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -39,5 +39,6 @@
   "Vakansiya": "Vacancy",
   "Əlavə": "Additional",
   "Xəbərlər": "News",
-  "Bütün hüquqlar qorunur": "All rights reserved"
+  "Bütün hüquqlar qorunur": "All rights reserved",
+  "Əsas səhifə": "Home page"
 }
