--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -39,5 +39,6 @@
   "Vakansiya": "Вакансия",
   "Əlavə": "Дополнительный",
   "Xəbərlər": "Новости",
-  "Bütün hüquqlar qorunur": "Все права защищены"
+  "Bütün hüquqlar qorunur": "Все права защищены",
+  "Əsas səhifə": "Домашняя страница"
 }
