Update translation (az)

--- a/locales/az/translation.json
+++ b/locales/az/translation.json
@@ -4,7 +4,7 @@
   "Bizimlə əlaqə": "Bizimlə əlaqə",
   "Bizə qoşul": "Bizə qoşul",
   "Bütün xidmətlər": "Bütün xidmətlər ",
-  "bir ödəmə nöqtəsində!": "bir ödəmə nöqtəsində",
+  "bir ödəmə nöqtəsində!": "bir ödəmə nöqtəsində!",
   "Axtar": "Axtar",
   "Şifrə": "Şifrə",
   "Daxil ol": "Daxil ol",
