--- a/locales/az/translation.json
+++ b/locales/az/translation.json
@@ -40,5 +40,6 @@
   "Əlavə": "Əlavə",
   "Xəbərlər": "Xəbərlər",
   "Bütün hüquqlar qorunur": "Bütün hüquqlar qorunur",
-  "Əsas səhifə": "Əsas səhifə"
+  "Əsas səhifə": "Əsas səhifə",
+  "Tətbiqi yüklə": "Tətbiqi yüklə"
 }
