--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -40,5 +40,6 @@
   "Əlavə": "Additional",
   "Xəbərlər": "News",
   "Bütün hüquqlar qorunur": "All rights reserved",
-  "Əsas səhifə": "Home page"
+  "Əsas səhifə": "Home page",
+  "Tətbiqi yüklə": "Download the application"
 }
