--- a/locales/ru/translation.json
+++ b/locales/ru/translation.json
@@ -40,5 +40,6 @@
   "Əlavə": "Дополнительный",
   "Xəbərlər": "Новости",
   "Bütün hüquqlar qorunur": "Все права защищены",
-  "Əsas səhifə": "Домашняя страница"
+  "Əsas səhifə": "Домашняя страница",
+  "Tətbiqi yüklə": "Скачать приложение"
 }
