--- a/locales/az/translation.json
+++ b/locales/az/translation.json
@@ -41,5 +41,9 @@
   "Xəbərlər": "Xəbərlər",
   "Bütün hüquqlar qorunur": "Bütün hüquqlar qorunur",
   "Əsas səhifə": "Əsas səhifə",
-  "Tətbiqi yüklə": "Tətbiqi yüklə"
+  "Tətbiqi yüklə": "Tətbiqi yüklə",
+  "Telefon nömrəsi tələb olunur.": "Telefon nömrəsi tələb olunur.",
+  "Telefon nömrəsi: Bu sahənin uzunluğu minimum 12 olmalıdır.": "Telefon nömrəsi: Bu sahənin uzunluğu minimum 12 olmalıdır.",
+  "Telefon nömrəsi və ya şifrə yararsızdır.": "Telefon nömrəsi və ya şifrə yararsızdı.r",
+  "Parol tələb olunur.": "Parol tələb olunur."
 }
